Improv consistency across browser codegen

--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/EFSM.ts.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/EFSM.ts.j2
@@ -23,3 +23,19 @@ export enum TerminalState {
 };
 
 export type State = ReceiveState | SendState | TerminalState;
+
+// ===========
+// Type Guards
+// ===========
+
+export function isReceiveState(state: State): state is ReceiveState {
+  return (Object.values(ReceiveState) as Array<State>).includes(state)
+}
+
+export function isSendState(state: State): state is SendState {
+  return (Object.values(SendState) as Array<State>).includes(state)
+}
+
+export function isTerminalState(state: State): state is TerminalState {
+  return (Object.values(TerminalState) as Array<State>).includes(state)
+}
