Name change for connect message in Node codegen

--- a/mpst_ts/codegen/generator/node/node_v3/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/efsm.ts.j2
@@ -69,7 +69,7 @@ export namespace Message {
   | S{{ state ~ action.label }}{% endfor %};
 {% endfor %}
 
-  export interface ConnectInvite {
+  export interface ConnectRequest {
     connect: Roles.Peers
   };
 
