--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/send_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/send_component.tsx.j2
@@ -2,8 +2,16 @@ import React from 'react';
 
 import * as Roles from './Roles';
 
-import { ReceiveState, SendState, TerminalState } from './EFSM'; 
-import { SendComponentFactory, SendComponentFactoryFactory } from './Session';
+import {
+  ReceiveState,
+  SendState,
+  TerminalState
+} from './EFSM'; 
+
+import {
+  SendComponentFactory,
+  SendComponentFactoryFactory
+} from './Session';
 
 {% for type in endpoint.types -%}
 import { {{ type.external ~ ((' as ' ~ type.alias) if type.external != type.alias else '') }} } from "{{ type.path }}";
