--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/session.ts.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/session.ts.j2
@@ -1,22 +1,20 @@
 import React from 'react';
-import * as Roles from './Roles';
-import { State, ReceiveState, SendState, TerminalState,  } from './EFSM';
 
+import {
+  Constructor,
+  DOMEvents,
+  EventHandler,  
+  MaybePromise,
+} from './Types';
 
-type FunctionPropertyNames<T> = {
-  [K in keyof T]: T[K] extends Function | undefined ? K : never;
-}[keyof T];
-type FunctionProperties<T> = Pick<T, FunctionPropertyNames<T>>;
+import {
+  State,
+} from './EFSM';
 
-export type DOMEvents = FunctionProperties<React.DOMAttributes<any>>
+import {
+  Peers
+} from './Roles';
 
-export type FunctionArguments<T> = T extends (...args: infer R) => infer _ ? R : never;
-
-export type Constructor<T> = new (...args: any[]) => T;
-export type EventHandler<Payload, K extends keyof DOMEvents> = (event: FunctionArguments<DOMEvents[K]>) => MaybePromise<Payload>;
 export type SendComponentFactory<Payload> = <K extends keyof DOMEvents> (event: K, handler: EventHandler<Payload, K>) => Constructor<React.Component>;
-export type SendComponentFactoryFactory = <Payload> (role: Roles.Peers, label: string, successor: State) => SendComponentFactory<Payload>;
+export type SendComponentFactoryFactory = <Payload> (role: Peers, label: string, successor: State) => SendComponentFactory<Payload>;
 export type ReceiveHandler = (message: any) => MaybePromise<State>;
-
-export type MaybePromise<T> = T | Promise<T>;
-export type FromJust<T> = T extends MaybePromise<infer R> ? R : unknown;
